feat: new adjustments
